import image and nav create

--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects-business</title>
 </head>
 <body>
-    <h2>G3 Architects Business</h2>
+    <nav>
+        <h2>G3 Architects</h2>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contract</li>
+            <li>Log In</li>
+        </ul>
+    </nav>
+    <Header>
 
+    </Header>
+    <Main>
+
+    </Main>
+    <Footer></Footer>
+    
+  
     
 </body>
 </html>
