--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="main-1">
                <h2>Quick list of Our <br> <span class="col">Features</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, <br> or randomised words which don't look even</p>
             <br>
             <input class="btn-primary" type="button" value="Explore More"> 
             </div>
