--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    
+
     <title>g3-architects-business</title>
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <!-- <i class="fas fa-bars"> </i> -->
+            <i class="fa-solid fa-list"></i>
+        </label>
         <h2>G3 Architects</h2>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contract</li>
-            <li>Log In</li>
+            <li> <a class="active" href="#">Home</a> </li>
+            
+            <li> <a href="">About</a> </li>
+            <li> <a href="">Contract</a> </li>
+            <li> <a href="">Log In</a> </li>
         </ul>
     </nav>
     <Header>
@@ -161,5 +170,6 @@
             <p class="copyright">All rights reserved copyright@2023 by Arfin Mia</p>
         </section>
     </Footer>
+
 </body>
 </html>
